test/types/coerce/bradc/int2uint.good
int2uint.chpl:6: error: type mismatch in assignment from int(64) to uint(64)
